--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,7 @@ body.suspended {
 #suspended #page-url {
 	font-size: 1rem;
 	margin-bottom: 1.5rem;
+	max-width: 900px;
 }
 
 #suspended #page-url a {
@@ -241,10 +242,11 @@ body.options {
 
 .options textarea {
 	width: 100%;
-	height: 100px;
+	height: 180px;
 	margin-top: 6px;
 	font-family: monospace;
 	field-sizing: content;
+	resize: vertical;
 }
 
 .options .button {
