--- a/public/style.css
+++ b/public/style.css
@@ -160,6 +160,19 @@ body.popup {
 	display: none;
 }
 
+.popup .action-progress {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	aspect-ratio: 1/1;
+}
+
+.popup .action-progress svg {
+	width: 75%;
+	height: 75%;
+}
+
 /* options */
 
 body.options {
@@ -387,4 +400,37 @@ body.options {
 
 .options #extension-id {
 	min-width: 400px;
+}
+
+/* spinner */
+
+.spinner {
+	animation: rotate 2s linear infinite;
+}
+
+.spinner .path {
+	stroke: #B0C4DE;
+	stroke-linecap: round;
+	animation: dash 1.5s ease-in-out infinite;
+}
+
+@keyframes rotate {
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes dash {
+	0% {
+		stroke-dasharray: 1, 150;
+		stroke-dashoffset: 0;
+	}
+	50% {
+		stroke-dasharray: 90, 150;
+		stroke-dashoffset: -35;
+	}
+	100% {
+		stroke-dasharray: 90, 150;
+		stroke-dashoffset: -124;
+	}
 }
